Adapting to NVM model
